After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 795269 - Hyperlink underlining broken
Hyperlink underlining broken
Status: RESOLVED FIXED
Product: vte
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: VTE Maintainers
VTE Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-04-14 20:50 UTC by Egmont Koblinger
Modified: 2018-04-15 06:43 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Egmont Koblinger 2018-04-14 20:50:12 UTC
Non-consecutive hyperlink fragments sharing the same "id" should be underlined together. It used to work correctly, but apparently broke at some point.

cat perf/hyperlink-demo.txt

Mouseover "ID of 250 bytes once, twice" (should be underlined at once) or "foobarfoo..." (the last foo lives a separate life) or "http://exa[linewrap]le.com" (should be underlined at once).

0-52 is okay. Since at "foobarfoo..." it's consistently the last "foo" that lives its own separate life, my first suspect is the new parser.
Comment 1 Christian Persch 2018-04-14 21:35:55 UTC
Confirmed.

Looks like a bug in StringTokeniser, I'll try to find it.
Comment 2 Christian Persch 2018-04-14 21:52:57 UTC
Should be fixed on master; please confirm.
Comment 3 Egmont Koblinger 2018-04-15 06:43:15 UTC
Looks okay at first glimpse, thanks!