parser: glue: StringTokeniser must not be used with a temporary

StringTokeniser requires the string to be kept alive
while iterating over its tokens.

https://bugzilla.gnome.org/show_bug.cgi?id=795269